HEHU DIFF START

--- a/metrics.ini
+++ b/metrics.ini
@@ -61,8 +61,21 @@ LineAR="conf,DisplayAspectRatio"
 LineCenter="conf,Center1Player"
 LineMoreOptions="gamecommand;screen,ScreenOptionsService;name,More Options"
 
-RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:y(SCREEN_CENTER_Y-160+46*offsetFromCenter) end
+RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
+	self:y(SCREEN_CENTER_Y-160+46*offsetFromCenter) \
+end
 
 SeparateExitRowY=SCREEN_CENTER_Y+160
 CursorOnCommand=visible,false
 ShowExplanations=false
+
+[MusicWheel]
+ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
+	self:y(offsetFromCenter*30); \
+end
+NumWheelItems=18
+
+[TextBanner]
+TitleOnCommand=visible,false;x,9000
+SubtitleOnCommand=visible,false;x,9000
+ArtistOnCommand=visible,false;x,9000
