more diff and music screen update

--- a/metrics.ini
+++ b/metrics.ini
@@ -72,8 +72,24 @@ ShowExplanations=false
 [MusicWheel]
 ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	self:y(offsetFromCenter*30); \
+	if math.abs(offsetFromCenter) < 1 then \
+		self:x(-20); \
+	end; \
 end
 NumWheelItems=18
+
+[ScreenSelectMusic]
+ShowOptionsMessageSeconds=0.3
+
+BannerOnCommand=diffusealpha,0
+
+[MusicWheelItem]
+SectionExpandedX=-20
+SectionExpandedOnCommand=maxwidth,200;diffuse,color("#c3a545");strokecolor,color("#000000");halign,0
+
+SectionCollapsedX=-20
+SectionCollapsedOnCommand=maxwidth,200;diffuse,color("#c3a545");strokecolor,color("#000000");halign,0
+SectionCountOnCommand=visible,false;x,9000
 
 [TextBanner]
 TitleOnCommand=visible,false;x,9000
