more diff stuff

--- a/metrics.ini
+++ b/metrics.ini
@@ -85,13 +85,16 @@ BannerOnCommand=diffusealpha,0
 
 [MusicWheelItem]
 SectionExpandedX=-20
-SectionExpandedOnCommand=maxwidth,200;diffuse,color("#c3a545");strokecolor,color("#000000");halign,0
+SectionExpandedOnCommand=
 
 SectionCollapsedX=-20
-SectionCollapsedOnCommand=maxwidth,200;diffuse,color("#c3a545");strokecolor,color("#000000");halign,0
+SectionCollapsedOnCommand=
 SectionCountOnCommand=visible,false;x,9000
 
 [TextBanner]
 TitleOnCommand=visible,false;x,9000
 SubtitleOnCommand=visible,false;x,9000
 ArtistOnCommand=visible,false;x,9000
+
+[SongManager]
+SongGroupColor1=color("0,0,0,0")
