screen select music fixes

--- a/metrics.ini
+++ b/metrics.ini
@@ -73,10 +73,12 @@ ShowExplanations=false
 ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	self:y(offsetFromCenter*30); \
 	if math.abs(offsetFromCenter) < 1 then \
-		self:x(-20); \
+		self:x(-20+math.abs(offsetFromCenter)*20); \
 	end; \
 end
 NumWheelItems=18
+
+RouletteColor=0,0,0,0
 
 [ScreenSelectMusic]
 ShowOptionsMessageSeconds=0.3
