--- a/metrics.ini
+++ b/metrics.ini
@@ -84,6 +84,7 @@ RouletteColor=0,0,0,0
 ShowOptionsMessageSeconds=0.3
 
 BannerOnCommand=diffusealpha,0
+TimerOnCommand=visible,false
 
 [MusicWheelItem]
 SectionExpandedX=-20
