--- a/metrics.ini
+++ b/metrics.ini
@@ -94,6 +94,21 @@ SectionCollapsedX=-20
 SectionCollapsedOnCommand=
 SectionCountOnCommand=visible,false;x,9000
 
+[ScreenGameplay]
+LifeP1OnCommand=visible,false
+LifeP2OnCommand=visible,false
+
+ScoreP1OnCommand=visible,false
+ScoreP2OnCommand=visible,false
+SecondaryScoreP1OnCommand=visible,false
+SecondaryScoreP2OnCommand=visible,false
+
+PlayerInitCommand=x,SCREEN_CENTER_X-214;y,SCREEN_CENTER_Y;zoom,0.8
+
+[Player]
+ReceptorArrowsYStandard=-230
+ReceptorArrowsYReverse=100
+
 [TextBanner]
 TitleOnCommand=visible,false;x,9000
 SubtitleOnCommand=visible,false;x,9000
