<Prim> make the lifebar change in increments of 2 like iidx

--- a/metrics.ini
+++ b/metrics.ini
@@ -109,6 +109,9 @@ PlayerInitCommand=x,SCREEN_CENTER_X-214;y,SCREEN_CENTER_Y;zoom,0.8
 ReceptorArrowsYStandard=-230
 ReceptorArrowsYReverse=100
 
+[LifeMeterBar]
+InitialValue=0.22
+
 [TextBanner]
 TitleOnCommand=visible,false;x,9000
 SubtitleOnCommand=visible,false;x,9000
