--- a/metrics.ini
+++ b/metrics.ini
@@ -110,6 +110,7 @@ ReceptorArrowsYStandard=-230
 ReceptorArrowsYReverse=100
 
 [LifeMeterBar]
+# Fallback for older versions of sm5
 InitialValue=0.22
 
 [TextBanner]
