Screen Gameplay done

--- a/metrics.ini
+++ b/metrics.ini
@@ -113,6 +113,14 @@ ReceptorArrowsYReverse=100
 # Fallback for older versions of sm5
 InitialValue=0.22
 
+[ScreenPlayerOptions]
+LineNames="1,2,3A,3B,4,5,6,R1,R2,7,8,New,9,10,11,12,13,14,16,17"
+
+LineNew="lua,newskin_option_row()"
+
+[NoteField]
+ShowBeatBars=true
+
 [TextBanner]
 TitleOnCommand=visible,false;x,9000
 SubtitleOnCommand=visible,false;x,9000
