--- a/metrics.ini
+++ b/metrics.ini
@@ -86,6 +86,9 @@ ShowOptionsMessageSeconds=0.3
 BannerOnCommand=diffusealpha,0
 TimerOnCommand=visible,false
 
+[ScreenEvaluation]
+TimerOnCommand=visible,false
+
 [MusicWheelItem]
 SectionExpandedX=-20
 SectionExpandedOnCommand=
