--- a/metrics.ini
+++ b/metrics.ini
@@ -14,9 +14,10 @@ ChoiceNames="GameStart,Test,Settings,SMO,Edit,Exit"
 #is start screen, we dont want to go back.
 HandleBackButton=false
 
-#scroller Position
-ScrollerX=SCREEN_RIGHT-100
-ScrollerY=SCREEN_CENTER_Y
+ScrollerTransform=function(self,offset,itemIndex,numItems) TitleMenuScroll(self,offset,itemIndex,numItems) end
+
+ScrollerX=
+ScrollerY=
 
 #defining GameStart
 #want to go directly to select music
@@ -58,7 +59,7 @@ LineBGB="conf,BGBrightness"
 LineWindow="conf,Windowed"
 LineDR="conf,DisplayResolution"
 LineAR="conf,DisplayAspectRatio"
-LineCenter="conf,Center1Player"
+LineCenter="lua,VersionSelect()"
 LineMoreOptions="gamecommand;screen,ScreenOptionsService;name,More Options"
 
 RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
