finalizing happysky screentitlemusic

--- a/metrics.ini
+++ b/metrics.ini
@@ -87,6 +87,9 @@ ShowOptionsMessageSeconds=0.3
 BannerOnCommand=diffusealpha,0
 TimerOnCommand=visible,false
 
+MusicWheelX=SCREEN_CENTER_X+120
+MusicWheelY=SCREEN_CENTER_Y-10
+
 [ScreenEvaluation]
 TimerOnCommand=visible,false
 
